RJ-2024-020 rewrite for html

--- a/_articles/RJ-2024-020/RJ-2024-020.tex
+++ b/_articles/RJ-2024-020/RJ-2024-020.tex
@@ -367,7 +367,7 @@ plots <- plot_estimates(jagsdata = pkg_data,
 
 
 \begin{figure}[H]
-\includegraphics[width=1\linewidth,height=0.4\textheight]{figures/fig_3} \caption{The plotted posterior point estimates for each of the three sectors (public in blue, private commercial medical in grey, and private other in gold) for Nepal at the national administrative level over time with the 80\% and 95\% uncertainty interval denoted as shaded regions. Time in years is on the x-axis and the proportion of each contraceptive method supply share is on the y-axis. The survey observations are plotted as points with their associated standard error, plotted as vertical lines. This plot was produced using a multi-country set up of the \CRANpkg{mcmsupply} functions.}\label{fig:fig-3}
+\includegraphics[width=1\linewidth,height=0.4\textheight]{figures/fig_3} \caption{The plotted posterior point estimates for each of the three sectors (public in blue, private commercial medical in grey, and private other in gold) for Nepal at the national administrative level over time with the 80\% and 95\% uncertainty interval denoted as shaded regions. Time in years is on the x-axis and the proportion of each contraceptive method supply share is on the y-axis. The survey observations are plotted as points with their associated standard error, plotted as vertical lines. This plot was produced using a multi-country set up of the mcmsupply functions.}\label{fig:fig-3}
 \end{figure}
 
 If the user wishes to pull out specific estimates for a given country and year, they may do so using the \texttt{pull\_estimates} function. The model object, country name and the year of interest are supplied, the function then returns a tibble of the corresponding estimates.
@@ -391,7 +391,7 @@ These arguments are the only discernible differences in the commands for users, 
 
 
 \begin{figure}[H]
-\includegraphics[width=1\linewidth,height=0.4\textheight]{figures/fig_4} \caption{The plotted posterior point estimates for each of the three sectors (public in blue, private commercial medical in grey, and private other in gold) for Nepal at the national administrative level over time with the 80\% and 95\% uncertainty interval denoted as shaded regions. Time in years is on the x-axis and the proportion of each contraceptive method supply share is on the y-axis. The survey observations are plotted as points with their associated standard error, plotted as vertical lines. This plot was produced using a single-country set up of the \CRANpkg{mcmsupply} functions.}\label{fig:fig-4}
+\includegraphics[width=1\linewidth,height=0.4\textheight]{figures/fig_4} \caption{The plotted posterior point estimates for each of the three sectors (public in blue, private commercial medical in grey, and private other in gold) for Nepal at the national administrative level over time with the 80\% and 95\% uncertainty interval denoted as shaded regions. Time in years is on the x-axis and the proportion of each contraceptive method supply share is on the y-axis. The survey observations are plotted as points with their associated standard error, plotted as vertical lines. This plot was produced using a single-country set up of the mcmsupply functions.}\label{fig:fig-4}
 \end{figure}
 
 \subsection{Case 3: Estimating contraceptive method supply shares at the subnational administration level for multiple countries simultaneously}\label{case-3-estimating-contraceptive-method-supply-shares-at-the-subnational-administration-level-for-multiple-countries-simultaneously}
