--- a/_articles/RJ-2024-020/RJ-2024-020.Rmd
+++ b/_articles/RJ-2024-020/RJ-2024-020.Rmd
@@ -14,7 +14,7 @@ abstract: "In this paper, we introduce the R package mcmsupply which implements 
   supply, produced by mcmsupply at a national and subnational level, are the first
   of their kind. These estimates and projections have diverse applications, including
   acting as an indicator of family planning market stability over time and being utilised
-  in the calculation of estimates of modern contraceptive use.  \n"
+  in the calculation of estimates of modern contraceptive use."
 draft: no
 author:
 - name: Hannah Comiskey
@@ -71,7 +71,7 @@ Family Planning 2030 (FP2030) is a ‘global movement dedicated to advancing the
 For the remainder of the paper, we will refer to the original modern contraceptive supply share model as the multi-country national mcmsupply model. The single-country \CRANpkg{mcmsupply} model uses a scaled-down version of the multi-country approach. It borrows strength from the multi-country model using modular model runs with informative priors placed on key parameters to provide precise outcome estimation, even in the absence of data for a particular contraceptive method. Modularization in Bayesian analysis describes the process within a statistical model where information is restricted to flow only from the prior to the likelihood. Thus, preventing the ‘contamination’ of key parameters from suspect data (@Lunn2009 as cited in @Plummer2015). In the context of our problem, parameters estimated within the multi-country model are used to inform the priors of the single-country (either national or subnational administrative division) models. This approach prevents spurious parameter estimates due to a lack of data for some locations.  To summarise how the single-country and multi-country models are connected to each other, Figure \@ref(fig:fig-1) depicts this modelling relationship at the national administration level. The main differences between the multi-country and single-country approaches is that for a single-country model, we only have data for one country (at the national or subnational administration division) and the country-level (in the national model) or subnational-level (in the subnational model) population parameters are informed by estimates from the corresponding multi-country model. In contrast to this, the multi-country model uses national or subnational level data (depending on your administrative level of interest) from many countries simultaneously to estimate model parameters and the country-level (in the national model) or subnational-level (in the subnational model) population parameters are estimated hierarchically. The \CRANpkg{mcmsupply} package contains vignettes that consider case studies of both single-country and multi-country model estimation approaches at the national and subnational administration levels.
 
 ```{r fig-1, echo=FALSE, out.width = "100%", out.height = "35%", fig.cap = "A flow chart to illustrate the relationship between the multi-country and single-country national estimation approaches. The median estimates of the multi-country national model parameters are used as informative priors in the single-country national model. A legend describing each element of the schematic is located in the blue box."}
-knitr::include_graphics("figures/fig_1.pdf")
+if(knitr::is_latex_output()) knitr::include_graphics("figures/fig_1.pdf") else knitr::include_graphics("figures/fig_1.svg")
 ```
 
 
@@ -103,11 +103,15 @@ The inst/data-raw folder of the \CRANpkg{mcmsupply} package contains sample R co
 (ref:tab1Cap) The subnational contraceptive supply source data used in the subnational estimation models. Country and Region list the name of the country and province the observation relates to. The Method column lists the type of the contraceptive method supplied. The mid-year when the survey was collected is listed in average_year. The supply sector is found in sector_categories. The observed proportion and standard error are found in proportion and SE.proportion. The number of respondent making up each observation are listed in n.
 
 
-```{r tab-1,  echo=FALSE, fig.pos="H"}
-knitr::kable(tail(mcmsupply::subnat_FPsource_data), format="latex", booktabs=TRUE,
+```{r tab-1, echo=FALSE}
+if(knitr::is_latex_output()) {
+  knitr::kable(tail(mcmsupply::subnat_FPsource_data), format="latex", booktabs=TRUE,
       caption = '(ref:tab1Cap)' ) %>% 
   kableExtra::kable_styling(latex_options="scale_down") %>%
   kableExtra::kable_styling(latex_options = "HOLD_position")
+} else{
+  knitr::kable(tail(mcmsupply::subnat_FPsource_data), caption = '(ref:tab1Cap)' )
+}
 ```
 
 
@@ -116,11 +120,15 @@ Lastly, data on country classification, ISO codes and area groupings is provided
 (ref:tab2Cap) The Country_and_area_classification dataset is the Track20 project country and area classification data according to the United Nations Statistical Division, standard country or area codes for statistical use (M49). This data set is how we classify each country in subcontinental regions. The name of the country, the International Organization for Standardization (ISO) code for each country, the continent, sub-continent are listed. Details on whether or not a country is defined as a developing, located in Sub-Saharan Africa and the status of its participation in FP2020 (now FP2030) are also provided.
 
 
-```{r tab-2, echo=FALSE, fig.pos="H"}
-knitr::kable(head(mcmsupply::Country_and_area_classification), format="latex",
+```{r tab-2, echo=FALSE}
+if(knitr::is_latex_output()) {
+  knitr::kable(head(mcmsupply::Country_and_area_classification), format="latex",
       booktabs=TRUE, caption = '(ref:tab2Cap)' ) %>% 
   kableExtra::kable_styling(latex_options="scale_down") %>%
   kableExtra::kable_styling(latex_options = "HOLD_position")
+} else{
+  knitr::kable(tail(mcmsupply::Country_and_area_classification), caption = '(ref:tab2Cap)' )
+}
 ```
 
 
@@ -130,7 +138,8 @@ knitr::kable(head(mcmsupply::Country_and_area_classification), format="latex",
 In \CRANpkg{mcmsupply}, the data processing occurs in two steps: First, the raw input data is retrieved and preliminary cleaning to the dataset is completed. Secondly, the cleaned data is processed to provide the model inputs for the Bayesian hierarchical model. This two-step process removes any black-box element to the model fitting process and allows the user to review the data at both stages and refer to it later when considering model outputs.
 The first step involves the `get_data` function. This function retrieves the raw data from the stored contraceptive supply source dataset, does data cleaning and processing to address any issues with missing data and regional naming inconsistencies. Its arguments are summarized in Table \@ref(tab:tab1). The `get_data` function carries out several data pre-processing tasks. For example, it will remove observations where two or more sectors are missing. It also checks to see if observations across all three sectors sum to one and will replace missing observations with 0 when the total does sum to one. The function transforms the raw data away from the (0,1) boundary as parameter estimates that lie on the distribution limits cause issues with convergence during the model estimation process. Finally, the `get_data` function imputes any missing standard errors using a binomial approximation. To use the the `get_data` function, the user first defines whether they wish to use national or subnational level administrative data via the `national` argument. National level data is accessed when the `national` argument is set to `TRUE`. When subnational administrative data is required, the user sets national to `FALSE`. Similarly, the user defines whether they want to use multi-country estimation with data from multiple countries or single-country estimation with data from a single-country via the `local` argument. The default setting for the `local` argument is `FALSE`. This induces a multi-country estimation, where the outcomes for all the countries in the contraceptive supply source dataset will be estimated simultaneously. In the event of single-country estimation, the user sets `local` to TRUE and indicates their country of interest via the `mycountry` argument. The names of the countries listed in the package data can be found in the country_names dataset. The help file for this dataset can be accessed via the R command `?mcmsupply::country_names`. The `fp2030` argument controls whether to include countries that are participating in the FP2030 initiative or not. The default includes only the named FP2030 countries (see `country_names`) in the dataset. There is the optional functionality to include a custom dataset. This allows the user to run the model on data outside of that stored within the package. The `surveydata_filepath` is a character string that denotes the location of the custom dataset. The file must meet a series of internal checks on file type, column names, suitable data ranges and missing data. When a custom dataset is supplied to `get_data`, the function carries out the checks and alerts the user to any differences between what is expected and what has been supplied. If `surveydata_filepath` is left as `NULL`, by default the function uses the stored `national_FPsource_data` or `subnat_FPsource_data`, depending on what administrative level the user has specified via the `national` argument (Table \@ref(tab:tab1)). The `get_data` function returns a list containing the cleaned data and a list of arguments supplied to the function. Storing the arguments of the `get_data` function allows the set-up information to flow without requiring the user to repeatedly supply the same arguments for each step of the modelling process.
 
-
+```{r te-tab1, echo = FALSE, results = "asis"}
+latex_tab1 <- r"(
 \begin{table}[h]
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|c|c|c|}
@@ -158,9 +167,27 @@ surveydata\_filepath &
 \caption{The arguments of the get\_data function. The purpose of this function is to retrieve and clean the Demographic and Health Survey (DHS) data or custom user supplied data for use in supply share estimation. The ‘Argument’ column names the function component. Data type describes the argument. Description explains the purpose of the argument and any default entries. }
 \label{tab:tab1}
 \end{table}
+)"
+
+md_tab1 <- r"(
+| **Argument**          | **Data type**      | **Description**                                                                                                                                                                                                                                                             |
+|-----------------------|--------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| national              | Character          | It indicates whether the user is interested in using data at the national or subnational administration level. This is a binary TRUE or FALSE argument. Default is TRUE which retrieves national level data, while FALSE retrieves subnational data.                            |
+| local                 | Character          | It indicates whether the user is interested in using data for a single population or not. This is a binary TRUE or FALSE argument. Default is FALSE.                                                                                                                         |
+| mycountry             | Character          | This is the name of the country you wish to do single-country estimation for. The data will only be returned for this country. Default is NULL.                                                                                                                              |
+| fp2030                | Character          | It indicates whether the user is interested in using only countries participating in FP2030. This is a binary TRUE or FALSE argument. Default is TRUE.                                                                                                                      |
+| surveydata_filepath   | Character string   | Pathway to the location of the custom dataset. When left as NULL, the function automatically uses the stored datasets. Default is NULL.                                                                                                                                     |
+
+Table: (\#tab:tab1) The arguments of the `get_data` function. The purpose of this function is to retrieve and clean the Demographic and Health Survey (DHS) data or custom user supplied data for use in supply share estimation. The ‘Argument’ column names the function component. Data type describes the argument. Description explains the purpose of the argument and any default entries.
+)"
+
+if(knitr::is_latex_output()) cat(latex_tab1) else cat(md_tab1)
+```
 
 Step two of the data pre-processing is the `get_modelinputs` function. This function takes the cleaned data from the previous step and repackages it into suitable inputs for the model implementation. The arguments of the function are summarised in Table \@ref(tab:tab2). This function uses the arguments set in the `get_data` function as well as additional parameters for the model. These parameters include the year the user wishes to begin their estimation at and the year they finish on.  In the \CRANpkg{mcmsupply} package, the models use basis splines (B-splines), to capture the complexities in variation of the contraceptive supply source data over time. The use of splines for the estimation of demographic indicators is growing in popularity. Previous studies used small-area estimation models with splines to capture complex shapes of demographic spatio-temporal data [@Ugarte2010; @Ugarte2009]. In recent years, many international health organisations have also used splines for the estimation of key demographic indicators. These include the estimation and projection of under-5 mortality for United Nations Children's Fund (UNICEF) [@Sharrow2019] and the estimation of excess morality due to Covid-19 for the World Health Organisation (WHO) [@Knutson2023]. We build on these previous studies to use penalised regression splines in the mcmsupply R package. B-splines use basis-functions to create piecewise cubic polynomials. The number of basis functions that are fit to the data is determined by the number of knots. Knots are the locations along the x-axis where the piecewise polynomials of the B-splines join. As you increase the number of knots in the basis functions, the B-splines give a tighter fit to the data. Similarly, if you decrease the number of knots in the basis, you will get a smoother fit to your data.   In the \CRANpkg{mcmsupply} package, the user may alter the number of knots (`nsegments`) used in the basis functions. The default number of knots is `12`, as was used in Comiskey et al. (2023). This equates to a knot approximately every 3.5 years. Through validation, it was found that having fewer knots dis-improved model fit, while more knots did not significantly improve model fit. Like the `get_data` function, this function returns a list containing the model inputs and the function arguments.
 
+```{r te-tab2, echo = FALSE, results = "asis"}
+latex_tab2 <- r"(
 \begin{table}[h]
 \caption{The arguments of the get\_modelinputs function. The purpose of this function is to get the model inputs for the JAGS model used for supply share estimation. In the table, the argument name and data type of the argument is stated, a description of the argument and any default values is then provided.}
 \resizebox{\textwidth}{!}{%
@@ -179,6 +206,23 @@ raw\_data &
 }
 \label{tab:tab2}
 \end{table}
+)"
+
+md_tab2 <- r"(
+| **Argument** | **Data type** | **Description**                                                                                                                                                                                          |
+|--------------|---------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| startyear    | Numeric       | The year you wish to start your estimation at.                                                                                                                                                            |
+| endyear      | Numeric       | The year you wish to finish your estimation at.                                                                                                                                                           |
+| nsegments    | Numeric       | The number of knots you wish to include in your basis functions. Default is 12.                                                                                                                           |
+| raw_data     | List          | The output of the get_data function, which includes a list of the function arguments used and the cleaned contraceptive supply source data.                                                                |
+
+Table: (\#tab:tab2) The arguments of the `get_modelinputs` function. The purpose of this function is to get the model inputs for the JAGS model used for supply share estimation. In the table, the argument name and data type of the argument is stated, a description of the argument and any default values is then provided.
+)"
+
+
+if(knitr::is_latex_output()) cat(latex_tab2) else cat(md_tab2)
+```
+
 
 # The estimation process
 
@@ -229,6 +273,8 @@ $\delta_{q,m,s,k-1}$ is the first order difference between spline coefficients $
 
 (ref:tab4) This table summarises the purpose of each parameter within each of the four models described in the \CRANpkg{mcmsupply} R package. The four types of models are listed in the 'Model type' column. For each model, the parameters listed in the 'Parameter name' column are the default parameters monitored when the argument `jagsparams=NULL` is used within the `run_jags_model` function. 'Parameter purpose' explains the role each parameter plays within the estimation process and the notation can be linked directly to the 'Model overview' section of this paper. 
 
+```{r te-tab4, echo = FALSE, results = "asis"}
+latex_tab4 <- r"(
 \begin{table}[H]
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|c|c|c|}
@@ -292,12 +338,43 @@ $\delta_{q,m,s,k-1}$ is the first order difference between spline coefficients $
 \caption{(ref:tab4)}
 \label{tab:tab4}
 \end{table}
+)"
+
+md_tab4 <- r"(
+| **Model type**              | **Parameter name** | **Parameter purpose**                                                                                                                                                             |
+|-----------------------------|--------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| Multi-country national      | P                  | The method supply share proportions across all countries, methods and sectors.                                                                                                    |
+|                             | beta.k             | The set of spline coefficients for ($\beta_{c,m,s,k}$) for all countries, methods and sectors at each knot.                                                                       |
+|                             | alpha\_cms         | The intercept term ($\alpha_{c,m,s}$) for all countries, methods and sectors.                                                                                                     |
+|                             | delta.k            | The first order differences between spline coefficients ($\delta_{c,m,s,k}$) across all knots for all countries, methods and sectors.                                             |
+| Single-country national     | P                  | The method supply share proportions for a given country, across all methods and sectors.                                                                                          |
+|                             | alpha\_cms         | The intercept term ($\alpha_{c,m,s}$) for the country of interest c, across all methods and sectors.                                                                              |
+|                             | inv.sigma\_delta   | The precision matrix used in the multivariate normal prior of $\delta_{c,1:M,s,k}$.                                                                                               |
+|                             | beta.k             | The set of spline coefficients ($\beta_{c,m,s,k}$) for the country of interest c, across all methods and sectors at each knot.                                                    |
+| Multi-country subnational   | alpha\_pms         | The intercept term ($\alpha_{p,m,s}$) for all subnational provinces, methods and sectors.                                                                                         |
+|                             | alpha\_cms         | The intercept term ($\alpha_{c,m,s}$) for all countries, methods and sectors. $\alpha_{c[p],m,s}$ is the expected value of $\alpha_{p,m,s}$.                                       |
+|                             | inv.sigma\_delta   | The precision matrix used in the multivariate normal prior of $\delta_{p,1:M,s,k}$.                                                                                               |
+|                             | tau\_alpha\_pms    | The sector-specific precision associated with $\alpha_{p,m,s}$.                                                                                                                   |
+|                             | beta.k             | The set of spline coefficients ($\beta_{p,m,s,k}$) across all subnational provinces, methods and sectors at each knot.                                                            |
+|                             | delta.k            | The first order differences between spline coefficients across all knots ($\delta_{p,m,s,k}$) for all provinces, methods and sectors.                                             |
+| Single-country subnational  | P                  | The method supply share proportions for the subnational provinces in the country of interest, for all methods and sectors.                                                        |
+|                             | alpha\_pms         | The intercept term ($\alpha_{p,m,s}$) for the subnational provinces in the country of interest, for all methods and sectors.                                                      |
+|                             | beta.k             | The set of spline coefficients ($\beta_{p,m,s,k}$) for the subnational provinces in the country of interest, across all methods and sectors at each knot.                         |
+
+Table: (\#tab:tab4) The parameters for different model types. Each parameter is described by its use in modeling supply share proportions, the intercept term, spline coefficients, and the precision matrix.
+)"
+
+
+if(knitr::is_latex_output()) cat(latex_tab4) else cat(md_tab4)
+```
 
 
 ## Model fitting
 
 The `run_jags_model` function fits the selected JAGS model to the supplied data and returns a list of MCMC samples and point summaries for the time-period and locations of interest. Initial set-up arguments (`national`, `local`, `mycountry`) are inherited from the specification of the previous `get_modelinputs` function. The additional inputs of this function are summarised in Table \@ref(tab:tab3). The `jagsdata` argument of this function is a list of initial set-up arguments and JAGS model inputs gathered from the `get_modelinputs` function. `jagsparams` is a vector of strings that name the model parameters the user wishes to monitor within the JAGS model. The default is `NULL`. When `jagsparams = NULL`, the function will refer to a stored vector of parameters to monitor (Table \@ref(tab:tab4)). The JAGS parameters of `n_iter = 80000`, `n_burnin = 10000` and `n_thin = 35` ensure that the model has converged and that the final posterior sample size is 2000 samples. The function `get_point_estimates` takes the chains produced by the JAGS model and estimates the median, 95% credible intervals and 80% credible intervals. The `get_point_estimates` function runs automatically inside the `run_jags_model` function and returns the point summaries as part of the `run_jags_model` function output. The `run_jags_model` function returns a list containing the JAGS output of the model and the point summaries for the estimates.
 
+```{r te-tab3, echo = FALSE, results = "asis"}
+latex_tab3 <- r"(
 \begin{table}[]
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|c|c|c|}
@@ -317,6 +394,25 @@ n\_thin           & Numeric            & \begin{tabular}[c]{@{}c@{}}Number of sa
 \caption{The arguments of the run\_jags\_model function. The purpose of this function is to run the Bayesian hierarchical models stored within the \CRANpkg{mcmsupply}  package for either single- or multi-country datasets at the administration level of interest. The argument name and data type of the argument is stated, a description and any default values of the argument are then provided.}
 \label{tab:tab3}
 \end{table}
+)"
+
+md_tab3 <- r"(
+| **Argument** | **Data type** | **Description** |
+|--------------|---------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| jagsdata     | List          | The output of the `get_modelinputs` function. A list of the initial set-up arguments and the JAGS inputs required using the data.                                                     |
+| jagsparams   | Vector        | A string vector of model parameters to be monitored. NULL invokes a standard vector to be used. Default is NULL.                                                                     |
+| n_iter       | Numeric       | Number of iterations you wish to run your JAGS model for. Default is 80000.                                                                                                          |
+| n_burnin     | Numeric       | Number of burn-in samples you wish to run your JAGS model for. Default is 10000.                                                                                                     |
+| n_thin       | Numeric       | Number of samples you wish to thin your JAGS sample by. Default is 35.                                                                                                               |
+
+Table: (\#tab:tab3) The arguments of the `run_jags_model` function. The purpose of this function is to run the Bayesian hierarchical models stored within the mcmsupply package for either single- or multi-country datasets at the administration level of interest. The argument name and data type of the argument is stated, a description and any default values of the argument are then provided.
+)"
+
+
+if(knitr::is_latex_output()) cat(latex_tab3) else cat(md_tab3)
+```
+
+
 
 
 ## Model output
@@ -324,6 +420,8 @@ n\_thin           & Numeric            & \begin{tabular}[c]{@{}c@{}}Number of sa
 
 The user then runs the function `plot_estimates`. This function visualises the point estimates with uncertainty alongside the data using the initial set up inputs of the `get_modelinputs` function and the output of the `run_jags_model` function (Table \@ref(tab:tab5)). The `plot_estimates` function returns a list of \CRANpkg{ggplot2} objects, one for each country (when using the national model) or subnational region (when using the subnational model).
 
+```{r te-tab5, echo = FALSE, results = "asis"}
+latex_tab5 <- r"(
 \begin{table}[]
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|c|c|c|}
@@ -342,10 +440,24 @@ model\_output &
 \caption{The arguments of the plot\_estimates function. The purpose of this function is to plot the data alongside the model estimates so that users can visualise their estimated method supply shares. The argument name and data type of the argument is stated, a description of the argument is then provided. }
 \label{tab:tab5}
 \end{table}
+)"
 
+md_tab5 <- r"(
+| **Argument**   | **Data type** | **Description**                                                                                                                                                        |
+|----------------|---------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| jagsdata       | List          | A list of the initial set-up arguments and the JAGS inputs required using the data retrieved in the get_modelinputs function.                                             |
+| model_output   | List          | The object assigned to store the list of MCMC results and estimate summary output from the run_jags_model function.                                                      |
+
+Table:  (\#tab:tab5) The arguments of the `plot_estimates` function. The purpose of this function is to plot the data alongside the model estimates so that users can visualize their estimated method supply shares. The argument name and data type are stated, followed by a description of the argument.
+)"
+
+
+if(knitr::is_latex_output()) cat(latex_tab5) else cat(md_tab5)
+```
 
 ```{r fig-2, echo=FALSE, out.width = "100%", out.height = "35%", fig.cap = "A flow chart to illustrate the decision processes that lead to the different estimation types within the mcmsupply package. The first decision is with respect to the administrative level of the estimates you wish to create – they may be either national level or subnational level. An explanation of each division is found on the first row of the figure. The second decision is with respect to the number of countries you wish to estimate – the user may estimate the proportions for all the countries at once or only one country. An explanation of each in the context of the specific administrative division is found on the second row of the figure. A set of sample functions used to estimate and plot the estimates for each modelling option are located on the third row of the figure"}
-knitr::include_graphics("figures/fig_2.pdf")
+
+if(knitr::is_latex_output()) knitr::include_graphics("figures/fig_2.pdf") else knitr::include_graphics("figures/fig_2.svg")
 ```
 
 
@@ -408,12 +520,11 @@ plots <- plot_estimates(jagsdata = pkg_data,
 ```
 
 
-(ref:fig3Cap) The plotted posterior point estimates for each of the three sectors (public in blue, private commercial medical in grey, and private other in gold) for Nepal at the national administrative level over time with the 80% and 95% uncertainty interval denoted as shaded regions. Time in years is on the x-axis and the proportion of each contraceptive method supply share is on the y-axis. The survey observations are plotted as points with their associated standard error, plotted as vertical lines. This plot was produced using a multi-country set up of the \CRANpkg{mcmsupply} functions.
+(ref:fig3Cap) The plotted posterior point estimates for each of the three sectors (public in blue, private commercial medical in grey, and private other in gold) for Nepal at the national administrative level over time with the 80% and 95% uncertainty interval denoted as shaded regions. Time in years is on the x-axis and the proportion of each contraceptive method supply share is on the y-axis. The survey observations are plotted as points with their associated standard error, plotted as vertical lines. This plot was produced using a multi-country set up of the mcmsupply functions.
 
 
 ```{r fig-3, echo=FALSE, out.width = "100%", out.height = "40%", fig.cap = '(ref:fig3Cap)'}
-
-knitr::include_graphics("figures/fig_3.pdf")
+if(knitr::is_latex_output()) knitr::include_graphics("figures/fig_3.pdf") else knitr::include_graphics("figures/fig_3.svg")
 ```
 
 
@@ -437,12 +548,11 @@ cleaned_natdata <- get_data(national = TRUE,
 These arguments are the only discernible differences in the commands for users, the rest of the workflow is as described above in Case 1. A complete workflow for this use case can be found in `vignettes/national_singlecountry_mod`. The single-country model produces model estimates that align with those estimated by the multi-country estimation model.
 
 
-(ref:fig4Cap) The plotted posterior point estimates for each of the three sectors (public in blue, private commercial medical in grey, and private other in gold) for Nepal at the national administrative level over time with the 80% and 95% uncertainty interval denoted as shaded regions. Time in years is on the x-axis and the proportion of each contraceptive method supply share is on the y-axis. The survey observations are plotted as points with their associated standard error, plotted as vertical lines. This plot was produced using a single-country set up of the \CRANpkg{mcmsupply} functions.
+(ref:fig4Cap) The plotted posterior point estimates for each of the three sectors (public in blue, private commercial medical in grey, and private other in gold) for Nepal at the national administrative level over time with the 80% and 95% uncertainty interval denoted as shaded regions. Time in years is on the x-axis and the proportion of each contraceptive method supply share is on the y-axis. The survey observations are plotted as points with their associated standard error, plotted as vertical lines. This plot was produced using a single-country set up of the mcmsupply functions.
 
 
 ```{r fig-4, echo=FALSE, out.width = "100%", out.height = "40%", fig.cap = '(ref:fig4Cap)'}
-
-knitr::include_graphics("figures/fig_4.pdf")
+if(knitr::is_latex_output()) knitr::include_graphics("figures/fig_4.pdf") else knitr::include_graphics("figures/fig_4.svg")
 ```
 
 
@@ -476,8 +586,7 @@ As in the previous use cases, the JAGS model is run and point summaries are calc
 
 
 ```{r fig-5, echo=FALSE, out.width = "100%", out.height = "40%", fig.cap = '(ref:fig5Cap)'}
-
-knitr::include_graphics("figures/fig_5.pdf")
+if(knitr::is_latex_output()) knitr::include_graphics("figures/fig_5.pdf") else knitr::include_graphics("figures/fig_5.svg")
 ```
 
 
@@ -497,6 +606,8 @@ cleaned_data <- get_data(national = FALSE,
 The file must be in `.xlsx` format and match the layout of either the `national_FPsource_data` or `subnat_FPsource_data datasets`, depending on your desired administration level.  The `get_data` function will carry out a series of internal checks to ensure the custom data matches the stored data layout. If the custom data is not suitable, the `get_data` function will return an error and a message to the user describing the issue with the custom data. A description of each column is given in Table \@ref(tab:tab6). Once the custom data checks are complete and passed, the regular workflow for fitting an \CRANpkg{mcmsupply} model continues. The JAGS model inputs are retrieved using the `get_modelinputs` and the JAGS model is fit using `run_jags_model`. The summary estimates are plotted using the `plot_estimates` function without any further changes to the workflow. A vignette of how to run the subnational model using a custom dataset can be found `vignettes/subnational_singlecountry_customdata_models`.
 
 
+```{r te-tab6, echo = FALSE, results = "asis"}
+latex_tab6 <- r"(
 \begin{table}[]
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|c|c|c|c|}
@@ -546,6 +657,27 @@ The file must be in `.xlsx` format and match the layout of either the `national_
 \caption{The required columns when supplying custom data to the get\_data . The column name is given, the type of data expected in each column along with a description of the column. The 'Required' column indicates whether the column belongs in national or subnational custom data files. The get\_data function will carry out a series of internal checks to ensure the custom data matches the stored data layout.}
 \label{tab:tab6}
 \end{table}
+)"
+
+md_tab6 <- r"(
+| **Column name**     | **Data type** | **Description**                                                                                                                                             | **Required**          |
+|---------------------|---------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------|
+| Country             | Character     | The name of the country you have the custom data for.                                                                                                                                              | National and subnational |
+| Region              | Character     | The name of the subnational area you have the custom data for.                                                                                                                                     | Subnational           |
+| Method              | Character     | The name of the contraceptive method you have the custom data for.                                                                                                                                 | National and subnational |
+| average\_year       | Numeric       | The year that the observation was collected in.                                                                                                                                                    | National and subnational |
+| sector\_categories  | Character     | The supply sector of the contraceptive method you have the custom data for.                                                                                                                       | Subnational           |
+| sector\_category    | Character     | The supply sector of the contraceptive method you have the custom data for.                                                                                                                       | National              |
+| proportion          | Numeric       | The proportion of a given contraceptive method supplied by the observation.                                                                                                                        | National and subnational |
+| SE.proportion       | Numeric       | The associated standard error of the proportion supplied by the observation.                                                                                                                       | National and subnational |
+| n                   | Numeric       | The sample size used to estimate the observation.                                                                                                                                                   | National and subnational |
+
+Table: (\#tab:tab6) The required columns when supplying custom data to the `get_data`. The column name is given, the type of data expected in each column along with a description of the column. The 'Required' column indicates whether the column belongs in national or subnational custom data files. The `get_data` function will carry out a series of internal checks to ensure the custom data matches the stored data layout.
+)"
+
+
+if(knitr::is_latex_output()) cat(latex_tab6) else cat(md_tab6)
+```
 
 # Discussion 
 
