RJ-2024-012 fix inline equations

--- a/_articles/RJ-2024-012/RJ-2024-012.Rmd
+++ b/_articles/RJ-2024-012/RJ-2024-012.Rmd
@@ -695,14 +695,14 @@ variable for that specific cluster vs. the reference cluster. The second
 table characterizes each cluster by its omics signature. The omics
 signature is a cluster-specific mean for each variable in the omics
 data. For instance, latent cluster 1 is characterized by low levels of
-cg_EPM2AIP1 ($\mu_1 (\text{cg_EPM2AIP1})= -0.157$) and cg_VTRNA1_3
-($\mu_1 (\text{cg_VTRNA1_3})= -0.225$), and high levels of all other
+cg_EPM2AIP1 ($\mu_1 (\text{cg\_EPM2AIP1})= -0.157$) and cg_VTRNA1_3
+($\mu_1 (\text{cg\_VTRNA1\_3})= -0.225$), and high levels of all other
 omic features; for example, cg_GRHL3
-($\mu_1 (\text{cg_GRHL3})= 0.2452019$). On the contrary, latent
+($\mu_1 (\text{cg\_GRHL3})= 0.2452019$). On the contrary, latent
 cluster 2 features high levels of cg\_EPM2AIP1
-($\mu_2 (\text{cg_EPM2AIP1})=  0.303$) and cg\_VTRNA1\_3
-($\mu_2 (\text{cg_VTRNA1_3})= 0.185$), and low levels of all other
-features including cg\_GRHL3 ($\mu_2 (\text{cg_GRHL3})= -0.363$). The
+($\mu_2 (\text{cg\_EPM2AIP1})=  0.303$) and cg\_VTRNA1\_3
+($\mu_2 (\text{cg\_VTRNA1\_3})= 0.185$), and low levels of all other
+features including cg\_GRHL3 ($\mu_2 (\text{cg\_GRHL3})= -0.363$). The
 third table relates the exposures to the latent clusters. For instance,
 `hs_hg_m_scaled` represents the scaled level of maternal
 mercury exposure. The coefficient OR for `hs_hg_m_scaled` is
