--- a/_articles/RJ-2024-020/RJ-2024-020.Rmd
+++ b/_articles/RJ-2024-020/RJ-2024-020.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'mcmsupply: An R Package for Estimating Contraceptive Method Market Supply
   Shares'
-abstract: "In this paper, we introduce the R package mcmsupply which implements Bayesian
+abstract: In this paper, we introduce the R package mcmsupply which implements Bayesian
   hierarchical models for estimating and projecting modern contraceptive market supply
   shares over time. The package implements four model types. These models vary by
   the administration level of their outcome estimates (national or subnational estimates)
@@ -14,7 +14,7 @@ abstract: "In this paper, we introduce the R package mcmsupply which implements 
   supply, produced by mcmsupply at a national and subnational level, are the first
   of their kind. These estimates and projections have diverse applications, including
   acting as an indicator of family planning market stability over time and being utilised
-  in the calculation of estimates of modern contraceptive use."
+  in the calculation of estimates of modern contraceptive use.
 draft: no
 author:
 - name: Hannah Comiskey
