RJ-2024-012 fix eq9

--- a/_articles/RJ-2024-012/RJ-2024-012.Rmd
+++ b/_articles/RJ-2024-012/RJ-2024-012.Rmd
@@ -356,8 +356,9 @@ $$
     \boldsymbol{\mathbf{\mu}}_j^{(t+1)} & = \frac{\sum_{i=1}^N r_{ij}^{(t)}\boldsymbol{\mathbf{Z}}_i}{\sum_{i=1}^N r_{ij}^{(t)}} \label{eq6} \\
     \boldsymbol{\mathbf{\Sigma}}_j^{(t+1)} & = \frac{\sum_{i=1}^N r_{ij}^{(t)} \left(\boldsymbol{\mathbf{Z}}_i - \boldsymbol{\mathbf{\mu}}_j^{(t+1)} \right) \left(\boldsymbol{\mathbf{Z}}_i - \boldsymbol{\mathbf{\mu}}_j^{(t+1)} \right)^T}{\sum_{i=1}^N r_{ij}^{(t)}} \label{eq7} \\
     \gamma_j^{(t+1)} & = \frac{\sum_{i=1}^N r_{ij}^{(t)}Y_i}{\sum_{i=1}^N r_{ij}^{(t)}} \label{eq8} \\
-    \sigma_j^{2(t+1)} & = \frac{\sum_{i=1}^N r_{ij}^{(t)} \left(Y_i - \gamma_j^{(t+1)} \right)^2}{\sum_{i=1}^N r_{ij}^{(t)}} \label{eq9}
-\end{aligned}   (\#eq:eq5)
+    \sigma_j^{2(t+1)} & = \frac{\sum_{i=1}^N r_{ij}^{(t)} \left(Y_i - \gamma_j^{(t+1)} \right)^2}{\sum_{i=1}^N r_{ij}^{(t)}}
+\end{aligned}
+\label{eq9} (\#eq:eq5)
 $$
 
 Although maximization of $\boldsymbol{\mathbf{\beta}}_j^{(t+1)}$ in
@@ -705,7 +706,7 @@ cluster 2 features high levels of cg\_EPM2AIP1
 features including cg\_GRHL3 ($\mu_2 (\text{cg\_GRHL3})= -0.363$). The
 third table relates the exposures to the latent clusters. For instance,
 `hs_hg_m_scaled` represents the scaled level of maternal
-mercury exposure. The coefficient OR for `hs_hg_m_scaled` is
+mercury exposure. The coefficient OR for `hs_hg_m_scaled` is  
 0.791, meaning that for each doubling of the scaled level of maternal
 mercury exposure, the odds ratio of being assigned to latent cluster 2
 is 2.205. Since latent cluster 2 is associated with a higher child level
