Fix missing name in 2024-024

--- a/_articles/RJ-2024-024/RJ-2024-024.Rmd
+++ b/_articles/RJ-2024-024/RJ-2024-024.Rmd
@@ -12,7 +12,7 @@ abstract: |
   and handling, as well as the software design and options for future
   extensions are discussed in this paper.
 author:
-- name: 'Holger '
+- name: 'Holger Löwe'
   affiliation: Ludwig-Maximilians-Universität in Munich
   address:
   - Germany
