--- a/_articles/RJ-2024-024/RJ-2024-024.tex
+++ b/_articles/RJ-2024-024/RJ-2024-024.tex
@@ -2,8 +2,9 @@
 \title{fmeffects: An R Package for Forward Marginal Effects}
 
 
-\author{by Holger, Christian A. Scholbeck, Christian Heumann, Bernd Bischl, and Giuseppe Casalicchio}
+\author{by Holger Löwe\footnotemark[1], Christian A. Scholbeck\footnotemark[1], Christian Heumann, Bernd Bischl, and Giuseppe Casalicchio}
 
+\footnotetext[1]{H. Löwe and C.A. Scholbeck contributed equally.}
 \maketitle
 
 \abstract{%
@@ -24,7 +25,7 @@ extensions are discussed in this paper.
 \bibliography{fmeffects.bib}
 
 \address{%
-Holger\\
+Holger Löwe\\
 Ludwig-Maximilians-Universität in Munich\\%
 Germany\\ \url{hbj.loewe@gmail.com}\\
 %
