--- a/_articles/RJ-2024-033/RJ-2024-033.Rmd
+++ b/_articles/RJ-2024-033/RJ-2024-033.Rmd
@@ -25,8 +25,8 @@ author:
 date: '2025-06-12'
 date_received: '2024-01-11'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 23
+  lastpage: 43
 volume: 16
 issue: 4
 slug: RJ-2024-033
@@ -37,8 +37,8 @@ draft: no
 preview: preview.png
 bibliography: refs.bib
 header-includes:
-  - \usepackage{longtable}
-  - \usepackage{calc}
+- \usepackage{longtable}
+- \usepackage{calc}
 CTV: ~
 legacy_pdf: yes
 legacy_converted: no
