--- a/_articles/RJ-2024-034/RJ-2024-034.Rmd
+++ b/_articles/RJ-2024-034/RJ-2024-034.Rmd
@@ -61,8 +61,8 @@ author:
 date: '2025-07-14'
 date_received: '2024-01-11'
 journal:
-  firstpage: ~
-  lastpage: ~
+  firstpage: 44
+  lastpage: 63
 volume: 16
 issue: 4
 slug: RJ-2024-034
@@ -72,8 +72,7 @@ packages:
   bioc: []
 preview: preview.png
 tex_native: yes
-header-includes:
-  - \usepackage{enumitem}
+header-includes: \usepackage{enumitem}
 nocite: |
   @bader2012space,@basna2022data,@Basna:2024aa,@SplinetsP,@benoudjit2004,@cho2005class,@Boor1978APG,@goodman2003class,@LIU2022,@mason1993orthogonal,@nassar2023splinets,@nguyen2015construction,@Perperoglou:2019aa,@Petricoin:2002aa,@podgorski2021,@Qin,@Redd,@orthogonalsplinebasis,@schumaker2007spline,@gghilbertstrings,@xiao2017fashion,@Zhou
 bibliography: RJreferences.bib
