--- a/_articles/RJ-2024-039/RJwrapper.tex
+++ b/_articles/RJ-2024-039/RJwrapper.tex
@@ -44,8 +44,6 @@
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 
-\usepackage{longtable}
-\usepackage{calc}
 
 \begin{document}
 
@@ -56,6 +54,7 @@
 \volnumber{4}
 \year{2024}
 \month{December}
+\setcounter{page}{125}
 
 \begin{article}
   \input{RJ-2024-039}
