--- a/_news/RJ-2024-4-cran/RJ-2024-4-cran.Rmd
+++ b/_news/RJ-2024-4-cran/RJ-2024-4-cran.Rmd
@@ -27,6 +27,9 @@ preamble: \usepackage{float, longtable}
 volume: 16
 issue: 4
 slug: RJ-2024-4-cran
+journal:
+  lastpage: 202
+  firstpage: 201
 
 ---
 
